# screenpipe-python-client

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  app.py  cli.py  docs.md  example-env.txt  filter_wrapper.py  full-function-pipe.py  openwebui_function.py  outputs.py  pipe_wrapper.py  pyproject.toml  requirements.txt  run_server.py  screenpipe_client.py  screenpipe_pipeline.py  server.py  shortcuts.py  sp_utils.py  test.py  test_sdk.py  test_valves.py  utils.py  wrappers.py
baml_client/: async_client.py  globals.py  inlinedbaml.py  partial_types.py  sync_client.py  tracing.py  type_builder.py  types.py
baml_src/: clients.baml  search.baml
cli/: cli.py  run_server.py  shortcuts.py
notebooks/: cookbook.ipynb  sandbox.ipynb
open_webui_workspace/: README.md  full-filter.py  full-pipe.py  screenpipe_filter_function.py  screenpipe_function.py  screenpipe_search_function.py  simple_search_function.py
outputs/: inlet_response.json
src/: __init__.py
src/baml_client/: partial_types.py
src/baml_src/: clients.baml  search.baml
src/cli/: app.py  shortcuts.py
src/core/: __init__.py  core_filter.py  core_pipe.py  screenpipe.py
src/open_webui_workspace/: README.md  example.md  filter_function.py  pipe_function.py  pipe_wrapper.py  screenpipe_filter_function.py
src/server/: server.py
src/utils/: baml_utils.py  cli.py  constants.py  (+1 more)
tests/: __init__.py  conftest.py
utils/: baml_utils.py  configuration.py  constants.py  models.py  models.yaml  outputs.py  pipeline_utils.py  screenpipe.py  screenpipe_client.py  secrets.py  sp_utils.py  time_utils.py
(+18 files in other folders)
